@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.8.23-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-08-23 08:35:13, took 00:12:33, with 60 workers, on 3532 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2024-08-23 09:04:26, took 00:15:23, with 60 workers, on 3532 cases, 1 failed, 0 traces, 10 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -330,7 +330,7 @@ http://sources.freertr.org/cfg/conn-nvgre11.tst;conn-nvgre11.tst;success;etherne
 http://sources.freertr.org/cfg/conn-nvgre12.tst;conn-nvgre12.tst;success;vlan tunneling with nvgre
 http://sources.freertr.org/cfg/conn-nvgre13.tst;conn-nvgre13.tst;success;tunnel interface with nvgre
 http://sources.freertr.org/cfg/conn-p4lang01.tst;conn-p4lang01.tst;success;p4lang demultiplexer
-http://sources.freertr.org/cfg/conn-p4lang02.tst;conn-p4lang02.tst;success;p4lang downlink
+http://sources.freertr.org/cfg/conn-p4lang02.tst;conn-p4lang02.tst;#6-run-r3 tping 100 5 2.2.2.2 vrf v1;p4lang downlink
 http://sources.freertr.org/cfg/conn-pckoi01.tst;conn-pckoi01.tst;success;pckoip over ipv4
 http://sources.freertr.org/cfg/conn-pckoi02.tst;conn-pckoi02.tst;success;pckoip over ipv6
 http://sources.freertr.org/cfg/conn-pckoi03.tst;conn-pckoi03.tst;success;pckoip over pckoip
